Added leonids theme files

--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,8 @@
-# Welcome to Jekyll!
 #
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
+###################################
+# Site wide configuration
+####################################
 #
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
 title: William Bradford Larcombe
 email: william@williambl.com
 description: > # this means to ignore newlines until "baseurl:"
@@ -23,25 +13,63 @@ formatted_description: >
   Creator of games, mods, and other programs.
   Things I've made include [DeltaMC](https://github.com/deltamc-project), [the Haunt](https://github.com/williambl/Haunt), and the [EssentialFeatures](https://github.com/williambl/EssentialFeatures) minecraft mod.
   I often participate in Ludum Dares. 
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: williambl_
-github_username:  williambl
+url: http://localhost:4000
+#
+###################################
+# Jekyll configuration
+####################################
+#
+markdown:    kramdown
+highlighter:  pygments
+excerpt_separator: <!--more-->
 
-# Build settings
-markdown: kramdown
-theme: leonids
-plugins:
-  - jekyll-feed
+kramdown:
+  auto_ids: true
+  footnote_nr: 1
+  entity_output: as_char
+  toc_levels: 1..6
+  enable_coderay: false
 
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+#
+###################################
+# Site Owner configuration
+####################################
+#
+owner:
+  name: William Bradford Larcombe
+  avatar: avatar.jpg
+  job: "Developer"
+  bio: "Creator of games, mods, and other programs.
+  Things I've made include DeltaMC, the Haunt, and the EssentialFeatures minecraft mod.
+  I often participate in Ludum Dares.
+formatted_description: >
+  Creator of games, mods, and other programs.
+  Things I've made include [DeltaMC](https://github.com/deltamc-project), [the Haunt](https://github.com/williambl/Haunt), and the [EssentialFeatures](https://github.com/williambl/EssentialFeatures) minecraft mod.
+  I often participate in Ludum Dares."
+  email: william@williambl.com
+  disqus-shortname:
+  twitter: williambl_
+  facebook: #username
+  google:
+    plus: #username
+    analytics:
+    verify:
+    ad-client:
+    ad-slot:
+  bing-verify:
+  github: williambl
+  stackoverflow: #123456/username   from a "http://stackoverflow.com/users/123456/username" link
+  linkedin: #username
+  xing: #username
+  instagram: #username
+  lastfm: #username
+  tumblr: #username
+  pinterest: #username
+  foursquare: #username
+  steam: #username
+  dribbble: #username
+  youtube: #username
+  soundcloud: #username
+  weibo: #username
+  flickr: #username
+  codepen: #username
