--- a/_config.yml
+++ b/_config.yml
@@ -37,14 +37,10 @@ kramdown:
 #
 owner:
   name: William Bradford Larcombe
-  avatar: avatar.jpg
+  avatar: WBL/WBL0-378px.jpeg
   job: "Developer"
   bio: "Creator of games, mods, and other programs.
   Things I've made include DeltaMC, the Haunt, and the EssentialFeatures minecraft mod.
-  I often participate in Ludum Dares.
-formatted_description: >
-  Creator of games, mods, and other programs.
-  Things I've made include [DeltaMC](https://github.com/deltamc-project), [the Haunt](https://github.com/williambl/Haunt), and the [EssentialFeatures](https://github.com/williambl/EssentialFeatures) minecraft mod.
   I often participate in Ludum Dares."
   email: william@williambl.com
   disqus-shortname:
