--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,14 +1,8 @@
 # Authors
 # You can set another author using as many attributs as a site owner does.
 
-leo:
-  name: Leo
+example:
+  name: example
   email: example@domain.com
-  bio: "What do you want? Coffee, tea or coca cola?"
-  avatar: avatar-leo.jpg
-
-mike:
-  name: Mike
-  email: example2@domain.com
-  bio: "How old are you?"
-  avatar: avatar-mike.jpg
+  bio: "example"
+  avatar: avatar.jpg
