Set siteurl variable to use https: should fix mixed content

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ formatted_description: >
   Creator of games, mods, and other programs.
   Things I've made include [DeltaMC](https://github.com/deltamc-project), [the Haunt](https://github.com/williambl/Haunt), and the [EssentialFeatures](https://github.com/williambl/EssentialFeatures) minecraft mod.
   I often participate in Ludum Dares. 
-url: http://williambl.com
+url: https://williambl.com
 #
 ###################################
 # Jekyll configuration
