Changed syntax highlighter to rouge to stop github pages from throwing warnings at me

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ url: https://williambl.com
 ####################################
 #
 markdown:    kramdown
-highlighter:  pygments
+highlighter:  rouge
 excerpt_separator: <!--more-->
 
 kramdown:
