Add square image as avatar

--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ kramdown:
 #
 owner:
   name: William Bradford Larcombe
-  avatar: WBL/WBL0-378px.jpeg
+  avatar: WBL/WBL0-378px-square.jpeg
   job: "Developer"
   bio: "Creator of games, mods, and other programs.
   Things I've made include DeltaMC, the Haunt, and the EssentialFeatures minecraft mod.
