--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ formatted_description: >
   Things I've made include [DeltaMC](https://github.com/deltamc-project), [the Haunt](https://github.com/williambl/Haunt), and the [EssentialFeatures](https://github.com/williambl/EssentialFeatures) minecraft mod.
   I often participate in Ludum Dares. 
 url: https://williambl.com
+favicon: WBL/WBL0-128px-square.png
 #
 ###################################
 # Jekyll configuration
