--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,11 @@
 title: William Bradford Larcombe
 email: william@williambl.com
 description: > # this means to ignore newlines until "baseurl:"
-  Creator of games, mods, and other programs.
-  Things I've made include DeltaMC, the Haunt, and the EssentialFeatures minecraft mod.
+  Creator of games, mods, unity assets, and other things. Also often Ludum Dare participant.
+long_description: >
+  Creator of games, mods, unity assets, and other things.
+  Things I've made include [unity-destruction](https://github.com/williambl/unity-destruction), [DeltaMC](https://github.com/deltamc-project), and the [EssentialFeatures](https://github.com/williambl/EssentialFeatures) minecraft mod.
   I often participate in Ludum Dares.
-formatted_description: >
-  Creator of games, mods, and other programs.
-  Things I've made include [DeltaMC](https://github.com/deltamc-project), [the Haunt](https://github.com/williambl/Haunt), and the [EssentialFeatures](https://github.com/williambl/EssentialFeatures) minecraft mod.
-  I often participate in Ludum Dares. 
 url: https://williambl.com
 favicon: WBL/WBL0-128px-square.png
 #
@@ -40,9 +38,7 @@ owner:
   name: William Bradford Larcombe
   avatar: WBL/WBL0-378px-square.jpeg
   job: "Developer"
-  bio: "Creator of games, mods, and other programs.
-  Things I've made include DeltaMC, the Haunt, and the EssentialFeatures minecraft mod.
-  I often participate in Ludum Dares."
+  bio: Creator of games, mods, unity assets, and other things. Also often Ludum Dare participant.
   email: william@williambl.com
   disqus-shortname:
   twitter: williambl_
