Replace my stuff link in sidebar with code and video links

--- a/_data/sidebar_pages.yml
+++ b/_data/sidebar_pages.yml
@@ -1,5 +1,8 @@
- - title: My Stuff
-   url: /my-stuff
+ - title: Code
+   url: /my-stuff/code
+
+ - title: Video
+   url: /my-stuff/video
 
  - title: Archive
    url: /archive
