Add some js dependencies for tailwind to work as intended

--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,22 @@ kramdown:
   toc_levels: 1..6
   enable_coderay: false
 
+# plugins:
+#   - jekyll-postcss
+#   - jekyll-purgecss
+
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - node_modules
+  - yarn.lock
+  - package-lock.json
+  - README.md
+  - postcss.config.js
+  - purgecss.config.js
+  - netlify.toml
+  - bin
+  - .gitignore
 #
 ###################################
 # Site Owner configuration
