--- a/_data/projects.json
+++ b/_data/projects.json
@@ -11,6 +11,10 @@
         },
         "shields": [
             "https://img.shields.io/github/languages/code-size/williambl/EssentialFeatures"
+        ],
+        "tags": [
+            "java",
+            "forge"
         ]
     }
 ]
