Tweak project cards

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -3,18 +3,30 @@
         "name": "Essential Features",
         "role": "Owner, Main Programmer",
         "description": "An MC mod",
-        "homepage": "https://example.org",
-        "github": "https://example.org",
+        "homepage": "https://www.curseforge.com/minecraft/mc-mods/essential-features/files",
         "image": {
-            "src": "https://images.unsplash.com/photo-1580723843692-137caf37ad17?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1534&q=80",
-            "alt": "Placeholder"
+            "src": "https://media.forgecdn.net/avatars/236/469/637092749484707956.png",
+            "alt": "Essential Features logo"
         },
         "shields": [
-            "https://img.shields.io/github/languages/code-size/williambl/EssentialFeatures"
+            {
+                "image": "https://img.shields.io/github/languages/code-size/williambl/EssentialFeatures",
+                "url": "https://github.com/williambl/EssentialFeatures"
+            },
+            {
+                "image": "https://cf.way2muchnoise.eu/short_essential-features.svg",
+                "url": "https://www.curseforge.com/minecraft/mc-mods/essential-features/files"
+            }
         ],
         "tags": [
+            "kotlin",
             "java",
-            "forge"
+            "C#",
+            "python",
+            "forge",
+            "fabric",
+            "unity",
+            "discord"
         ]
     }
 ]
