Improve main section

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 description: "I make things. Sometimes they're not bad. <em>Sometimes.</em>"
 long_description: >
   Hi!
-  I sometimes make things, usually with code. You can see a small selection down below. I also often participate in Ludum Dares, and sometimes other game jams (if I remember when they happen!)
+  I make things, usually with code. You can see a small selection of things I've made down below. My main programming hobby is game modding, and I also often participate in game jams such as Ludum Dare (if I remember when they happen!).
 url: https://williambl.com
 favicon: 
 #
