--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,13 @@
 # Site wide configuration
 ####################################
 #
+title: Will BL
 description: "I make things. Sometimes they're not bad. <em>Sometimes.</em>"
 long_description: >
   Hi!
   I make things, usually with code. You can see a small selection of things I've made down below. My main programming hobby is game modding, and I also often participate in game jams such as Ludum Dare (if I remember when they happen!).
 url: https://willbl.dev/
-favicon: 
+favicon: WBL/gh-avatar-460.jpeg
 #
 ###################################
 # Jekyll configuration
