--- a/_config.yml
+++ b/_config.yml
@@ -26,9 +26,11 @@ kramdown:
   toc_levels: 1..6
   enable_coderay: false
 
-# plugins:
-#   - jekyll-postcss
-#   - jekyll-purgecss
+plugins:
+  - jekyll-postcss
+  - jekyll-purgecss
+css_dir: "css"
+
 
 exclude:
   - Gemfile
