--- a/_data/projects.json
+++ b/_data/projects.json
@@ -1,5 +1,25 @@
 [
     {
+        "name": "RaycastEngine",
+        "role": "Owner, Developer",
+        "description": "A game engine with Wolfenstein3D-style rendering. Image from Wikimedia Commons.",
+        "homepage": "https://github.com/williambl/raycast-engine",
+        "image": {
+            "src": "https://upload.wikimedia.org/wikipedia/commons/e/e7/Simple_raycasting_with_fisheye_correction.gif",
+            "alt": "RaycastEngine logo"
+        },
+        "shields": [
+            {
+                "image": "https://img.shields.io/github/stars/williambl/raycast-engine",
+                "url": "https://github.com/williambl/raycast-engine"
+            }
+        ],
+        "tags": [
+            "kotlin",
+            "lwjgl"
+        ]
+    },
+    {
         "name": "Big Buckets",
         "role": "Owner, Developer",
         "description": "An MC Forge and Fabric mod adding upgradable buckets.",
@@ -25,23 +45,23 @@
         ]
     },
     {
-        "name": "RaycastEngine",
-        "role": "Owner, Developer",
-        "description": "A game engine with Wolfenstein3D-style rendering. Image from Wikimedia Commons.",
-        "homepage": "https://github.com/williambl/raycast-engine",
+        "name": "unity-destruction",
+        "role": "Owner, Main Programmer",
+        "description": "A Unity Script that allows for customisable and realistic destruction of objects.",
+        "homepage": "https://github.com/williambl/unity-destruction",
         "image": {
-            "src": "https://upload.wikimedia.org/wikipedia/commons/e/e7/Simple_raycasting_with_fisheye_correction.gif",
-            "alt": "RaycastEngine logo"
+            "src": "/img/logos/unity-mwu-white.png",
+            "alt": "Unity3D logo"
         },
         "shields": [
             {
-                "image": "https://img.shields.io/github/stars/williambl/raycast-engine",
-                "url": "https://github.com/williambl/raycast-engine"
+                "image": "https://img.shields.io/github/stars/williambl/unity-destruction",
+                "url": "https://github.com/williambl/unity-destruction"
             }
         ],
         "tags": [
-            "kotlin",
-            "lwjgl"
+            "C#",
+            "unity"
         ]
     },
     {
@@ -69,23 +89,23 @@
         ]
     },
     {
-        "name": "unity-destruction",
-        "role": "Owner, Main Programmer",
-        "description": "A Unity Script that allows for customisable and realistic destruction of objects.",
-        "homepage": "https://github.com/williambl/unity-destruction",
+        "name": "Personal Website",
+        "role": "Owner",
+        "description": "The website you're looking at right now. Made with Jekyll and Tailwind CSS, with content generated from data defined in JSON.",
+        "homepage": "https://willbl.dev",
         "image": {
-            "src": "/img/logos/unity-mwu-white.png",
-            "alt": "Unity3D logo"
+            "src": "",
+            "alt": ""
         },
         "shields": [
             {
-                "image": "https://img.shields.io/github/stars/williambl/unity-destruction",
-                "url": "https://github.com/williambl/unity-destruction"
+                "image": "https://img.shields.io/badge/Google%20PageSpeed-99%2F100-success",
+                "url": "https://developers.google.com/speed/pagespeed/insights/"
             }
         ],
         "tags": [
-            "C#",
-            "unity"
+            "HTML",
+            "jekyll"
         ]
     }
 ]
