--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@
 ####################################
 #
 title: Will BL
-description: "I make things. Sometimes they're not bad. <em>Sometimes.</em>"
+description: "I make things. Maybe you'll enjoy some of them?"
 long_description: >
   Hi!
-  I make things, usually with code. You can see a small selection of things I've made down below. My main programming hobby is game modding, and I also often participate in game jams such as Ludum Dare (if I remember when they happen!).
+  I make things, usually with code. You can see a small selection of things I've made down below. I do most of my programming for game modding, and I also often participate in game jams such as Ludum Dare (if I remember when they happen!). My favourite language is Kotlin, but I am also proficient in Java and a few others.
 url: https://willbl.dev/
 favicon: WBL/gh-avatar-460.jpeg
 #
@@ -53,7 +53,7 @@ owner:
   name: Will BL
   avatar: "WBL/gh-avatar-460.jpeg"
   job: "Software Developer"
-  bio: "I make things. Sometimes they're not bad. <em>Sometimes.</em>"
+  bio: "I make things. Maybe you'll enjoy some of them?"
   email: william@williambl.com
   disqus-shortname:
   twitter:
